apps/jupyterhub/base/netpol_auth-proxy_alpine.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-jhub-auth-proxy-to-alpine-repos
  namespace: jupyterhub
spec:
  description: "Allow jupyterHub auth-proxy access to cluster services and DNS"
  endpointSelector:
    matchLabels:
      app: jhub-auth-proxy
  egress:
    - toEntities:
        - cluster
